#
# 项目名
#
SET(PROGRAM_NAME tinyToolkit-test)


#
# 库文件的生成目录
#
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)


#
# 获取当前目录下源文件
#
TRAVERSE_CURRENT_SOURCE_FILE(SOURCE_FILES)


#
# 链接源文件, 生成库文件
#
ADD_LIBRARY(${PROGRAM_NAME} SHARED ${SOURCE_FILES})


#
# 链接库文件
#
TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(tinyToolkit)


#
# 安装库文件
#
INSTALL(TARGETS tinyToolkit-test
		LIBRARY DESTINATION ${TEST_LIBRARY_INSTALL_PREFIX}
		ARCHIVE DESTINATION ${TEST_LIBRARY_INSTALL_PREFIX})


#
# 遍历安装头文件
#
TRAVERSE_INSTALL_INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}	${TEST_INCLUDE_INSTALL_PREFIX})
