#
# 项目名
#
SET(PROGRAM_NAME tinyToolkit)


#
# 获取当前目录下源文件
#
TRAVERSE_CURRENT_SOURCE_FILE(SOURCE_FILES)


#
# 链接源文件, 生成静态库文件
#
ADD_LIBRARY(${PROGRAM_NAME}	STATIC	${SOURCE_FILES})


#
# 链接库文件
#
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")

	TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(stdc++fs)

ENDIF ()


#
# curl支持选项
#
IF (CURL_SUPPORT)

	TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(curl)

ENDIF()


#
# sqlit支持选项
#
IF (SQLITE_SUPPORT)

	TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(sqlite3)

ENDIF()


#
# openssl支持选项
#
IF (OPENSSL_SUPPORT)

	TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(ssl crypto)

ENDIF()


#
# openssl支持选项
#
IF (MEMCACHED_SUPPORT)

	TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(memcached)

ENDIF()


#
# 库文件的生成目录
#
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
