#
# 项目名
#
SET(PROGRAM_NAME tinyToolkit)


#
# 库文件的生成目录
#
IF(WIN32)

	SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ELSE()

	SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ENDIF()



#
# 获取当前目录下源文件
#
RECURSE_CURRENT_DIRECTORY_SOURCE_FILE(SOURCE_FILES)


#
# 获取目录源文件分组
#
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\			${CMAKE_CURRENT_SOURCE_DIR})
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\id			${CMAKE_CURRENT_SOURCE_DIR}/id)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\log			${CMAKE_CURRENT_SOURCE_DIR}/log)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\net			${CMAKE_CURRENT_SOURCE_DIR}/net)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\test		${CMAKE_CURRENT_SOURCE_DIR}/test)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\pool		${CMAKE_CURRENT_SOURCE_DIR}/pool)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\timer		${CMAKE_CURRENT_SOURCE_DIR}/timer)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\debug		${CMAKE_CURRENT_SOURCE_DIR}/debug)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\logic		${CMAKE_CURRENT_SOURCE_DIR}/logic)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\common		${CMAKE_CURRENT_SOURCE_DIR}/common)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\crypto		${CMAKE_CURRENT_SOURCE_DIR}/crypto)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\system		${CMAKE_CURRENT_SOURCE_DIR}/system)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\utilities	${CMAKE_CURRENT_SOURCE_DIR}/utilities)
TRAVERSE_DIRECTORY_SOURCE_FILE_GROUP(tinyToolkit\\\\3rd\\\\fmt	${CMAKE_CURRENT_SOURCE_DIR}/3rd/fmt)


#
# 链接源文件, 生成库文件
#
ADD_LIBRARY(${PROGRAM_NAME} SHARED ${SOURCE_FILES})


#
# 链接库文件
#
IF(WIN32)

	#
	# fmt支持
	#
	IF(CMAKE_BUILD_TYPE STREQUAL Debug)

		TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(${PROJECT_SOURCE_DIR}/project/library/fmt/windows/debug/fmtd.lib)

	ELSE()

		TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(${PROJECT_SOURCE_DIR}/project/library/fmt/windows/release/fmt.lib)

	ENDIF()

ELSEIF(APPLE)

	#
	# fmt支持
	#
	IF(CMAKE_BUILD_TYPE STREQUAL Debug)

		TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(${PROJECT_SOURCE_DIR}/project/library/fmt/apple/debug/libfmtd.a)

	ELSE()

		TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(${PROJECT_SOURCE_DIR}/project/library/fmt/apple/release/libfmt.a)

	ENDIF()

ELSE()

	#
	# fmt支持
	#
	IF(CMAKE_BUILD_TYPE STREQUAL Debug)

		TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(${PROJECT_SOURCE_DIR}/project/library/fmt/linux/debug/libfmtd.a)

	ELSE()

		TRAVERSE_LIBRARY_FOR_PROGRAM_NAME(${PROJECT_SOURCE_DIR}/project/library/fmt/linux/release/libfmt.a)

	ENDIF()

ENDIF()


#
# 安装库文件
#
INSTALL(TARGETS tinyToolkit
		LIBRARY DESTINATION ${LIBRARY_INSTALL_PREFIX}
		ARCHIVE DESTINATION ${LIBRARY_INSTALL_PREFIX})


#
# 安装头文件
#
INSTALL(PROGRAMS tinyToolkit.h DESTINATION ${INCLUDE_INSTALL_PREFIX})


#
# 遍历安装头文件
#
TRAVERSE_INSTALL_INCLUDE(id			${INCLUDE_INSTALL_PREFIX}/id)
TRAVERSE_INSTALL_INCLUDE(log		${INCLUDE_INSTALL_PREFIX}/log)
TRAVERSE_INSTALL_INCLUDE(net		${INCLUDE_INSTALL_PREFIX}/net)
TRAVERSE_INSTALL_INCLUDE(test		${INCLUDE_INSTALL_PREFIX}/test)
TRAVERSE_INSTALL_INCLUDE(pool		${INCLUDE_INSTALL_PREFIX}/pool)
TRAVERSE_INSTALL_INCLUDE(timer		${INCLUDE_INSTALL_PREFIX}/timer)
TRAVERSE_INSTALL_INCLUDE(debug		${INCLUDE_INSTALL_PREFIX}/debug)
TRAVERSE_INSTALL_INCLUDE(logic		${INCLUDE_INSTALL_PREFIX}/logic)
TRAVERSE_INSTALL_INCLUDE(common		${INCLUDE_INSTALL_PREFIX}/common)
TRAVERSE_INSTALL_INCLUDE(crypto		${INCLUDE_INSTALL_PREFIX}/crypto)
TRAVERSE_INSTALL_INCLUDE(system		${INCLUDE_INSTALL_PREFIX}/system)
TRAVERSE_INSTALL_INCLUDE(utilities	${INCLUDE_INSTALL_PREFIX}/utilities)
TRAVERSE_INSTALL_INCLUDE(3rd/fmt	${INCLUDE_INSTALL_PREFIX}/3rd/fmt)
